# cim

./: .gitattributes  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  main.rs  parser.rs
src/cds/: field.rs
src/metadata/: error.rs  mod.rs  parser.rs  tests.rs  util.rs
src/metadata/cds/: entity.rs  field.rs
src/parser/: mod.rs  tests.rs  util.rs
src/parser/cds/: entity.rs  field.rs
src/parser/tag_parser/: types.rs  xml_rs.rs
src/xml_tags/: mod.rs  types.rs  xml_rs.rs
src/xml_tags/xml_rs/: mod.rs  tests.rs  types_impl.rs
tests/: parsing.rs
tests/examples/parsing/: expected.cds
tests/examples/parsing/error/expected/: 1.txt  2.txt  3.txt  4.txt  5.txt
tests/examples/parsing/error/metadata/: 1.xml  2.xml  3.xml  4.xml  5.xml
tests/examples/parsing/ok/expected/: 1.cds
tests/examples/parsing/ok/metadata/: 1.xml
