[package]
name = "cim"
description = "CDS Implementation generation by a Metadata document"
version = "0.3.5"
edition = "2021"
authors = ["zkud <anton.kudyrka@gmail.com>"]
license = "MIT"
repository = "https://github.com/zkud/cim"
homepage = "https://github.com/zkud/cim"
keywords = ["cli", "CDS", "OData", "Metadata"]
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
xml-rs = "0.8"
clap = {version="3.2", features=["derive"]}
